# energy-repset

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
advisor/: index.html
api/: index.html
api/combi_gens/: index.html
api/context/: index.html
constructive_algorithms/: index.html
docs/: advisor.md  constructive_algorithms.md  framework.md  getting_started.md  index.md  modules.md  todo.md  unified_framework.md  white_paper.md  workflow.md
energy_repset/: __init__.py  context.py  objectives.py  problem.py  time_slicer.py  workflow.py
examples/: ex1.py  ex1_getting_started.ipynb  ex1_getting_started.py  ex2.py  ex2_feature_space.ipynb  ex2_feature_space.py  ex3_getting_started.py  ex3_hierarchical_selection.ipynb  ex3_hierarchical_selection.py  ex4_representation_models.ipynb  ex4_representation_models.py  ex5_multi_objective.ipynb  ex5_multi_objective.py  ex6_constructive_algorithms.ipynb  ex6_constructive_algorithms.py  index.html
gallery/: index.html
getting_started/: index.html
javascripts/: github_source_links.js  mathjax.js
mesqual_repset/: combination_generator.py  context.py  diagnostics.py  features.py  objectives.py  problem.py  representation.py  results.py  search.py  time_slicer.py  types.py  workflow.py
modules/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_context.py  test_integration.py  test_objectives.py  test_time_slicer.py  test_workflow.py
unified_framework/: index.html
workflow/: index.html
(+184 files in other folders)
