[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-repset"
version = "0.1.0"
description = "A unified framework for representative subset selection in multi-variate time-series spaces"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Helge Esch"}]
maintainers = [{name = "Helge Esch"}]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "tslearn",
    "tqdm",
]

[project.optional-dependencies]
docs = ["mkdocs-material", "mkdocstrings[python]"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks end-to-end integration tests",
]
